# chicago-redistricting-back-end

./: .gitignore  README.md  preprocess_data.py  pyproject.toml
notebooks/: Chicago Census Tracts.ipynb  Population Data.ipynb
src/: __init__.py  building_blocks.py  census.py  colors.py  directories.py  geometries.py  population.py  redistricting.py
